--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
     <!-- Preconnect to Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    
+    <!-- Prevent white flash on initial load -->
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        background-color: #0a0e1a !important;
+        background: linear-gradient(135deg, #0a0e1a 0%, #102a43 25%, #1a1a2e 50%, #16213e 75%, #0a0e1a 100%) !important;
+        min-height: 100vh;
+      }
+      #root {
+        background-color: #0a0e1a;
+        background: linear-gradient(135deg, #0a0e1a 0%, #102a43 25%, #1a1a2e 50%, #16213e 75%, #0a0e1a 100%);
+        min-height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
