--- a/index.html
+++ b/index.html
@@ -2,10 +2,29 @@
 <html lang="en-AU">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
-    <meta name="description" content="Professional singer offering elegant live vocals for weddings, corporate events, and private occasions in Sydney, NSW." />
-    <title>Christina Sings4U | Professional Singer in Sydney</title>
+    <meta name="description" content="Professional singer offering elegant live vocals for weddings, corporate events, and private occasions in Sydney, NSW. Solo, duo, trio, and full band performances available. Book your event today!" />
+    <meta name="keywords" content="professional singer Sydney, wedding singer Sydney, corporate event singer, live vocals Sydney, solo performer, band performances, Christina Sings4U, Sydney vocalist, live music entertainment, wedding entertainment Sydney, corporate entertainment Sydney, private event singer, live music Sydney NSW, professional vocalist, event singer booking" />
+    <meta name="author" content="Christina Sings4U" />
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta http-equiv="content-language" content="en-AU" />
+    <title>Christina Sings4U | Professional Singer Sydney | Wedding & Event Entertainment</title>
+    
+    <!-- Open Graph / Social Media Sharing (for better appearance in Google and social media) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Christina Sings4U | Professional Singer Sydney | Wedding & Event Entertainment" />
+    <meta property="og:description" content="Professional singer offering elegant live vocals for weddings, corporate events, and private occasions in Sydney, NSW. Solo, duo, trio, and full band performances available. Book your event today!" />
+    <meta property="og:image" content="https://christina-sings4you.com.au/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Christina Sings4U - Professional Singer in Sydney" />
+    <meta property="og:url" content="https://christina-sings4you.com.au" />
+    <meta property="og:site_name" content="Christina Sings4U" />
+    <meta property="og:locale" content="en_AU" />
     
     <!-- DNS Prefetch and Preconnect for better performance -->
     <link rel="dns-prefetch" href="https://res.cloudinary.com" />
