--- a/index.html
+++ b/index.html
@@ -2,22 +2,26 @@
 <html lang="en-AU">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/logo 192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="/logo 512.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/logo 192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/logo 512.png" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
-    <meta name="description" content="Professional singer offering elegant live vocals for weddings, corporate events, and private occasions in Sydney, NSW. Solo, duo, trio, and full band performances available. Book your event today!" />
-    <meta name="keywords" content="professional singer Sydney, wedding singer Sydney, corporate event singer, live vocals Sydney, solo performer, band performances, Christina Sings4U, Sydney vocalist, live music entertainment, wedding entertainment Sydney, corporate entertainment Sydney, private event singer, live music Sydney NSW, professional vocalist, event singer booking" />
+    <meta name="description" content="Professional singer in Sydney offering live vocals for weddings, corporate events & private occasions. Solo, duo, trio & full band available. Book your event today! Best singer Sydney, wedding singer Sydney, corporate event singer." />
+    <meta name="keywords" content="singer Sydney, professional singer Sydney, wedding singer Sydney, corporate event singer Sydney, live music Sydney, vocalist Sydney, wedding entertainment Sydney, event singer Sydney NSW, singer for hire Sydney, live music performer Sydney, professional vocalist Sydney, wedding singer for hire Sydney, corporate singer Sydney, private event singer Sydney, best singer Sydney, top singer Sydney, singer Sydney NSW, live singer Sydney, event singer Sydney, wedding singer Sydney NSW, corporate entertainment Sydney, live performance Sydney, music entertainment Sydney, Christina Sings4U" />
     <meta name="author" content="Christina Sings4U" />
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
     <meta name="googlebot" content="index, follow" />
     <meta name="language" content="English" />
     <meta http-equiv="content-language" content="en-AU" />
-    <title>Christina Sings4U | Professional Singer Sydney | Wedding & Event Entertainment</title>
+    <title>Singer Sydney | Professional Singer Sydney | Wedding Singer Sydney | Christina Sings4U</title>
     
     <!-- Open Graph / Social Media Sharing (for better appearance in Google and social media) -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Christina Sings4U | Professional Singer Sydney | Wedding & Event Entertainment" />
-    <meta property="og:description" content="Professional singer offering elegant live vocals for weddings, corporate events, and private occasions in Sydney, NSW. Solo, duo, trio, and full band performances available. Book your event today!" />
+    <meta property="og:title" content="Singer Sydney | Professional Singer Sydney | Wedding Singer Sydney | Christina Sings4U" />
+    <meta property="og:description" content="Professional singer in Sydney offering live vocals for weddings, corporate events & private occasions. Solo, duo, trio & full band available. Book your event today! Best singer Sydney, wedding singer Sydney, corporate event singer." />
     <meta property="og:image" content="https://christina-sings4you.com.au/og-image.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
